// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkContentContainer should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-content-container"
  >
    <h1>
      Heading
    </h1>
    <p>
      My paragraph.
    </p>
    <ul>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
      <li>
        Item 3
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`BpkContentContainer should render correctly with a "bareHtml" and "alternate" attributes 1`] = `
<DocumentFragment>
  <div
    class="bpk-content-container bpk-content-container--bare-html bpk-content-container--bare-html-alternate"
  >
    <h1>
      Heading
    </h1>
    <p>
      My paragraph.
    </p>
    <ul>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
      <li>
        Item 3
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`BpkContentContainer should render correctly with a "bareHtml" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-content-container bpk-content-container--bare-html"
  >
    <h1>
      Heading
    </h1>
    <p>
      My paragraph.
    </p>
    <ul>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
      <li>
        Item 3
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`BpkContentContainer should render correctly with a custom "className" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-content-container my-test-class"
  >
    <h1>
      Heading
    </h1>
    <p>
      My paragraph.
    </p>
    <ul>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
      <li>
        Item 3
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
